move back to the family

--- a/share/underlyings.yml
+++ b/share/underlyings.yml
@@ -26,6 +26,34 @@
   quoted_currency: ~
   submarket: random_index
   symbol: 1HZ100V
+1HZ200V:
+  asset: 1HZ200V
+  display_name: Volatility 200 (1s) Index
+  exchange_name: RANDOM
+  instrument_type: stockindex
+  market: synthetic_index
+  market_convention:
+    delta_premium_adjusted: 0
+    delta_style: spot_delta
+  market_type: non_financial
+  pip_size: 0.01
+  quoted_currency: ~
+  submarket: random_index
+  symbol: 1HZ200V
+1HZ300V:
+  asset: 1HZ300V
+  display_name: Volatility 300 (1s) Index
+  exchange_name: RANDOM
+  instrument_type: stockindex
+  market: synthetic_index
+  market_convention:
+    delta_premium_adjusted: 0
+    delta_style: spot_delta
+  market_type: non_financial
+  pip_size: 0.01
+  quoted_currency: ~
+  submarket: random_index
+  symbol: 1HZ300V
 1HZ10V:
   asset: 1HZ10V
   display_name: Volatility 10 (1s) Index
@@ -975,34 +1003,6 @@ R_100:
   quoted_currency: ~
   submarket: random_index
   symbol: R_100
-1HZ200V:
-  asset: 1HZ200V
-  display_name: Volatility 200 Index
-  exchange_name: RANDOM
-  instrument_type: stockindex
-  market: synthetic_index
-  market_convention:
-    delta_premium_adjusted: 0
-    delta_style: spot_delta
-  market_type: non_financial
-  pip_size: 0.01
-  quoted_currency: ~
-  submarket: random_index
-  symbol: 1HZ200V
-1HZ300V:
-  asset: 1HZ300V
-  display_name: Volatility 300 Index
-  exchange_name: RANDOM
-  instrument_type: stockindex
-  market: synthetic_index
-  market_convention:
-    delta_premium_adjusted: 0
-    delta_style: spot_delta
-  market_type: non_financial
-  pip_size: 0.01
-  quoted_currency: ~
-  submarket: random_index
-  symbol: 1HZ300V
 R_25:
   asset: R_25
   display_name: Volatility 25 Index
